--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "npmCommand": "install --legacy-peer-deps"
-            }
-        }
-    ]
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "npmCommand": "install --legacy-peer-deps",
+        "buildCommand": "CI=false npm run build",
+        "outputDirectory": "build"
+      }
+    }
+  ],
+  "framework": "create-react-app"
 }
